fix(cursor): visibility

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,5 +1,5 @@
-body {
-    cursor: none;
+* {
+    cursor: none !important;
 }
 
 a, button {
